# StronaPraceKol

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  com.sh  docker-compose-stag.yml  docker-compose.yml  entrypoint.sh  example.env  nginx.conf  nginx_staging.conf  pyproject.toml  requirements.txt
.github/workflows/: build_push.yml  dev  main.yml  production.yml  staging.yml
StronaProjektyKol/: settings.py  urls.py  wsgi.py
appName/: admin.py  apps.py  models.py
appName/migrations/: 0001_initial.py  0002_downloadedfile_author_id.py  0003_auto_20210304_1414.py  0004_auto_20210304_1456.py
documents/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
documents/migrations/: 0002_auto_20260111_1701.py  0003_auto_20260115_1305.py
documents/templatetags/: custom_documents_tags.py
messaging/: admin.py  models.py  urls.py  utils.py  views.py
messaging/migrations/: 0001_initial.py
papers/: admin.py  apps.py  custom_layout_object.py  custom_papers_tags.py  filters.py  forms.py  models.py  notifications.py  tasks.py  urls.py  views.py
papers/fixtures/: announcement.json  grades.json  groups.json  notificationperiod.json  studentclubs.json
papers/migrations/: 0001_initial.py  0002_auto_20210412_1339.py  0002_auto_20251216_1723.py  0002_auto_20260115_2107.py  0002_message_messageseen.py  0002_paper_original_author_id.py  (+22 more)
projekty_kol/: asgi.py  manage.py  settings.py  urls.py
src/: README.md  manage.py  requirements.txt
src/users/: apps.py  (+3 more)
templates/: base.html
users/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
(+147 files in other folders)
