[project]
name = "stronapracekol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgiref==3.3.1",
    "beautifulsoup4==4.9.3",
    "django>=3.1.13",
    "django-bootstrap4==2.3.1",
    "django-braces==1.14.0",
    "django-compat==1.0.15",
    "django-crispy-forms==1.11.1",
    "django-filter==2.4.0",
    "django-q==1.3.9",
    "django-q2>=1.4.0",
    "django-summernote==0.8.11.6",
    "django-widget-tweaks==1.4.8",
    "gunicorn==23.0.0",
    "pillow>=8.3.2",
    "psycopg2-binary==2.8.6",
    "python-dateutil==2.8.1",
    "python-dotenv>=1.2.1",
    "pytz==2021.1",
    "requests>=2.31.0",
    "setuptools==65",
    "six==1.15.0",
    "soupsieve==2.2",
    "sqlparse>=0.4.2",
    "text-unidecode==1.3",
]
